<resources>
    <string name="app_name">Trybnb</string>
    <string name="reservation" >Reservas</string>
    <string name="create" >Criar Reservas</string>
    <string name="profile" >Perfil</string>
    <string name="password_required">O campo Password é obrigatório</string>
    <string name="login_required">O campo Login é obrigatório</string>
    <string name="login_success">Login feito com sucesso!</string>
    <string name="login_failed">falha ao fazer o Login</string>
    <string name="hospedes">Nome do hóspede</string>
    <string name="hospedes_sobrenome">Sobrenome do hóspede</string>
    <string name="checkIn">Checkin</string>
    <string name="checkOut">Checkout</string>
    <string name="Informacoes">Informações adicionais</string>
    <string name="preco">R$</string>
    <string name="necessidades">Necessidades adicionais</string>
    <string name="total_preco">Preço total</string>
    <string name="deposito">Depósito pago</string>
    <string name="sucessCheck">Reserva feita com sucesso!</string>
    <string name="failCheck">Erro ao fazer a reserva</string>

</resources>
